--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ firebase-admin==6.2.0
 pillow==10.0.0
 requests==2.31.0
 python-dotenv==1.0.0
-watchdog==3.0.0 
+watchdog==3.0.0
+fuzzywuzzy==0.18.0
+python-Levenshtein==0.21.1 
