--- a/static/config.json
+++ b/static/config.json
@@ -1,11 +1,16 @@
 {
-  "numberOfPipes": 5,
+  "numberOfPipes": 10,
   "pipeConfig": {
     "Pipe 1": "Gin",
     "Pipe 2": "Tonic",
     "Pipe 3": "Campari",
     "Pipe 4": "Orange",
-    "Pipe 5": "Ice"
+    "Pipe 5": "Ice",
+    "Pipe 6": "Tequila Blanco",
+    "Pipe 7": "Salt",
+    "Pipe 8": "Lime",
+    "Pipe 9": "Triple Sec",
+    "Pipe 10": "Amaretto"
   },
   "selectedIngredients": [
     "Gin",
@@ -77,12 +82,12 @@
   },
   "theme": {
     "bgColor": "#e3d7c1",
-    "color1": "#6be6fc",
+    "color1": "#0098b3",
     "color2": "#ff6d97",
     "btnBackgroundColor": "#377276",
-    "btnHoverBackgroundColor": "#fbc1f6",
+    "btnHoverBackgroundColor": "#68b1a2",
     "btnTextColor": "#ffffff",
     "btnHoverTextColor": "#ffffff",
-    "angle": 135
+    "angle": 297.7271770695727
   }
 }
